--- a/file_config.json
+++ b/file_config.json
@@ -7,5 +7,6 @@
     "modmenu-3.0.1.jar": "C:/Users/#user#/AppData/Roaming/.minecraft/mods",
     "optifabric-1.12.10.jar": "C:/Users/#user#/AppData/Roaming/.minecraft/mods",
     "OptiFine_1.18.1_HD_U_H4.jar": "C:/Users/#user#/AppData/Roaming/.minecraft/mods",
-    "tweakeroo-fabric-1.18.0-0.11.0.jar": "C:/Users/#user#/AppData/Roaming/.minecraft/mods"
+    "tweakeroo-fabric-1.18.0-0.11.0.jar": "C:/Users/#user#/AppData/Roaming/.minecraft/mods",
+    ".OOFSound.zip": "C:/Users/#user#/AppData/Roaming/.minecraft/resourcepacks"
 }
